# aptl

./: .dockerignore  .env.example  .gitattributes  .gitguardian.yaml  .gitignore  .ground-control.yaml  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  aptl.config.example  aptl.json  docker-compose.yml  eslint.config.js  generate-indexer-certs.yml  hatch_build.py  lab_connections.txt  main.tf  mkdocs.yml  outputs.tf  pyproject.toml  release-please-config.json  sonar-project.properties  start-lab.sh  terraform.tfvars.example  towncrier.toml  troubleshooting.md  variables.tf
.claude/: settings.json
.claude/hooks/: protect_files.sh
.gc/: plan-rules.md
.github/: branch-protection-baseline.json  dependabot.yml
.github/ISSUE_TEMPLATE/: scn-010-asset-inventory.md  scn-010-composition-inventory.md
.github/workflows/: checks.yml  deploy.yml  docs-deploy.yml  pr-title-lint.yml  release-please.yml  release.yml  sonarcloud.yml
.serena/: project.yml
aurora/: setup-aurora-host.md  windows-vm-plan.md
aurora/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
changelog.d/: +console-explorer-ux.added.md  +git-env-isolation.fixed.md  +lab-api-token-env.fixed.md  +readme-scenario-docs.changed.md  +remove-dead-realization-runtime-fields.removed.md  +scope-kali-trivy.changed.md  +shuffle-orborus-static-ip.fixed.md  +techvault-live-boot-honesty.fixed.md  +towncrier-adoption.added.md  202.changed.md  212.changed.md  213.added.md  213.fixed.md  214.changed.md  215.changed.md  228.added.md  228.security.md  258.security.md  261.changed.md  282.changed.md  286.changed.md  287.fixed.md  293.fixed.md  304.fixed.md  305.security.md  310.added.md  311.added.md  312.added.md  318.added.md  319.added.md  321.changed.md  322.added.md  323.added.md  323.changed.md  323.fixed.md  324.changed.md  325.fixed.md  329.added.md  330.added.md  331.added.md  (+85 more)
config/: wazuh-certs-tool.sh
config/cortex/: application.conf  thehive-cortex.env
config/otel/: grafana-datasources.yaml  otel-collector-config.yaml  tempo-config.yaml
config/suricata/: suricata.yaml
config/thehive/: application.conf
config/wazuh_cluster/: ad_rules.xml  custom-shuffle  database_rules.xml  falco_rules.xml  filebeat_wazuh_module.yml  kali_decoders.xml  kali_redteam_rules.xml  patch-rule-path.py  (+5 more)
conformance/: README.md  runner.py
ctf_scenarios/: README.md  scenarios.json
docs/: CODE_QUALITY_REVIEW.md  deployment.md  index.md  red-team-taxonomy.md  releasing.md
examples/: aptl-lab-topology.sdl.yaml  hospital-ransomware-surgery-day.sdl.yaml  port-authority-surge-response.sdl.yaml  satcom-release-poisoning.sdl.yaml
exercises/: README.md
infrastructure/: main.tf  terraform.tfvars.example  variables.tf
mcp/: build-all-mcps.sh  docker-lab-config.json
mcp-minetest-server/: package-lock.json  package.json
mcp/mcp-scenario/: README.md  pyproject.toml
mcp/mcp-scenario/src/mcp_scenario/: __init__.py  examples.py  reference.py  server.py
mcp/mcp-scenario/src/mcp_scenario/sdl/: __init__.py  _source.py  accounts.py  agents.py  conditions.py  content.py  entities.py  features.py  infrastructure.py  nodes.py  objectives.py  orchestration.py  parser.py  relationships.py  scenario.py  scoring.py  validator.py  variables.py  vulnerabilities.py
mcp/mcp-scenario/tests/: test_server.py
notes/: auto_logging_plan.md  from_the_dev.md  kali_mcp_logging_plan.md  qradar-ami-checklist.md  victim-ami-plan.md
prompts/: purple_team_trainer.xml
scenarios/: 01-webapp-compromise.json  02-ad-domain-compromise.json  03-lateral-movement-data-theft.json  aces.lock.json  ad-domain-compromise.sdl.yaml  ad-domain-compromise.yaml  catalog.json  detect-brute-force.sdl.yaml  detect-brute-force.yaml  lateral-movement-data-theft.sdl.yaml  lateral-movement-data-theft.yaml  paper-agent-loop.sdl.yaml  prime-enterprise.sdl.yaml  prime-enterprise.yaml  prime-scenario.md  recon-nmap-scan.sdl.yaml  recon-nmap-scan.yaml  reference-web-service.sdl.yaml  ssh-lateral-movement.sdl.yaml  techvault-attacker-target.sdl.yaml  techvault-defensive-min.sdl.yaml  techvault-enterprise-web.sdl.yaml  techvault-observability-core.sdl.yaml  techvault-operational.sdl.yaml  techvault.sdl.yaml  webapp-compromise.sdl.yaml  webapp-compromise.yaml
schemas/: README.md  instantiated-scenario-v1.json  runtime-snapshot-v1.json  sdl-authoring-input-v1.json  workflow-result-envelope-v1.json
scripts/: aptl-env.sh  cortex-apikey.sh  cortex-index-init.sh  generate-ssh-keys.sh  generate_contract_schemas.py  seed-misp.sh  seed-prime.sh  seed-shuffle.sh  setup-vulnerable-victim.sh  test-continuity-audit.sh  test-wazuh-ar-drop.sh  test-wazuh-ar-whitelist.sh  thehive-apikey.sh
tests/: conftest.py  helpers.py  techvault_sdl.py  test_account_provider.py  test_aces_backend.py  test_aces_base_substrate.py  test_aces_diagnostics.py  test_aces_docker_materializer.py  test_aces_evaluator.py  test_aces_inventory_methodology.py  test_aces_materializer.py  test_aces_materializer_engine.py  test_aces_node_desired_state.py  test_aces_node_materialization.py  test_aces_observation.py  test_aces_orchestrator.py  test_aces_package_managers.py  test_aces_parity.py  test_aces_realization_fixture.py  test_aces_realization_service_ports.py  test_aces_repro.py  test_aces_stateful_realization.py  test_ad_inventory.py  test_api_auth.py  test_api_bff.py  test_api_config.py  test_api_console.py  test_api_integration.py  test_api_kill.py  test_api_lab.py  test_api_scenarios.py  test_api_terminal.py  test_assets.py  test_attacks.py  test_capture_registry.py  test_certs.py  test_cli.py  test_cli_config.py  test_cli_container.py  test_cli_evaluate.py  (+181 more)
tools/: .gitignore  check_pr_title.py  decompose_techvault_sdl.py  install-vale.sh  release.py  vale-lint-all.sh  vale-lint-hook.sh
web/: .dockerignore  Caddyfile  Dockerfile  Dockerfile.api  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
(+1796 files in other folders)
