[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aptl"
dynamic = ["version"]
description = "Advanced Purple Team Lab CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brad Edwards" }]
keywords = ["purple-team", "security", "cyber-range", "wazuh", "kali", "mcp", "aces"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "icontract>=2.6.0,<3.0",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
    "opentelemetry-semantic-conventions>=0.54b0",
    "cryptography>=42.0.0",
    "aces-sdl>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Brad-Edwards/aptl"
Repository = "https://github.com/Brad-Edwards/aptl"
Issues = "https://github.com/Brad-Edwards/aptl/issues"

[project.scripts]
aptl = "aptl.cli.main:app"
aptl-misp-suricata-sync = "aptl.services.misp_suricata_sync.main:main"

[project.optional-dependencies]
s3 = [
    "boto3>=1.28.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "asyncssh>=2.17.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.6.0",
    "coverage>=7.0.0",
    "httpx>=0.27.0",
    "hypothesis>=6.0.0",
    "ruff>=0.15.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aptl"]

# Version source of truth = the git tag (ADR 0006). hatch-vcs turns the tag that
# python-semantic-release creates into the built artifact's version; there is no
# version string to hand-edit. The generated file is gitignored.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/aptl/_version.py"

# Release automation (ADR 0006 blueprint, adopted from aces-scenario-packs):
# python-semantic-release computes the next version from Conventional Commit
# messages and creates the git tag. Tag-only (commit = false) so nothing is
# pushed back to protected main; the changelog is emitted to the GitHub Release.
[tool.semantic_release]
tag_format = "v{version}"
commit = false
allow_zero_version = true
major_on_zero = false
build_command = "python -m pip install build && python -m build"

[tool.semantic_release.branches.main]
match = "main"

# Map aptl's Keep-a-Changelog PR-title verbs to release levels so the version
# actually bumps for them (PSR's default recognizes only feat/fix/perf). This
# allowed set MUST stay in sync with CONVENTIONAL_TYPES in
# tools/check_pr_title.py (asserted by tests/test_pr_title_guard.py); unmatched
# types (chore/docs/refactor/test/ci/build) default to no release.
[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "added", "changed", "removed", "deprecated", "fix", "perf", "fixed", "security", "revert", "chore", "docs", "refactor", "test", "ci", "build"]
minor_tags = ["feat", "added", "changed", "removed", "deprecated"]
patch_tags = ["fix", "perf", "fixed", "security", "revert"]
other_allowed_tags = ["chore", "docs", "refactor", "test", "ci", "build"]

[tool.ruff]
# Lint only the Python control-plane source. Tests, generated files, and
# the (TypeScript) MCP / web trees are out of scope for this check.
src = ["src"]

[tool.ruff.lint]
# Intentionally narrow: this is a *complexity* gate, not a style linter —
# `C901` (McCabe cyclomatic complexity) is the only rule enabled, so the
# check fails a god-method without churning the codebase on style. Widen
# the rule set deliberately if/when the team wants more from ruff.
select = ["C901"]

[tool.ruff.lint.mccabe]
# A function over this many independent paths is the "god method" this
# gate exists to stop. Matches SonarCloud's default cognitive-complexity
# threshold (15); ratchet down over time as the backlog shrinks.
max-complexity = 15

# [tool.ruff.lint.per-file-ignores] intentionally absent: the complexity
# backlog is empty. Every function under `src/` is now gated at
# max-complexity 15 with no carve-outs (issue #286). If a future change must
# temporarily exempt a file, add the table back and record the offender in
# ADR-010's backlog with its measured score.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "fuzz: property-based fuzz tests (run with: pytest -m fuzz)",
    "integration: tests that spawn subprocesses or read/write the filesystem; runnable by default but selectable via `pytest -m integration` or `pytest -m 'not integration'`",
]
addopts = "-m 'not fuzz'"

[tool.coverage.run]
source = ["aptl"]

[tool.coverage.report]
show_missing = true
# Non-POSIX branches (file modes are advisory off POSIX) cannot be exercised
# on the Linux CI runner. Excluding the guard clause keeps these
# platform-specific paths out of coverage without inline trailing
# ``# pragma: no cover`` comments (SonarCloud S139). ``exclude_also`` extends
# — not replaces — coverage's defaults, so ``# pragma: no cover`` still works.
exclude_also = [
    "if os.name != \"posix\":",
]

[tool.coverage.xml]
output = "coverage.xml"
