[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aptl-labs"
version = "4.2.2"
description = "Advanced Purple Team Lab CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brad Edwards" }]
keywords = ["purple-team", "security", "cyber-range", "wazuh", "kali", "mcp", "aces"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
# Version is managed by release-please, which rewrites this string on release.
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "icontract>=2.6.0,<3.0",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "opentelemetry-exporter-otlp-proto-http>=1.33.0",
    "opentelemetry-semantic-conventions>=0.54b0",
    "cryptography>=42.0.0",
    "aces-sdl>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Brad-Edwards/aptl"
Repository = "https://github.com/Brad-Edwards/aptl"
Issues = "https://github.com/Brad-Edwards/aptl/issues"

[project.scripts]
aptl = "aptl.cli.main:app"
aptl-misp-suricata-sync = "aptl.services.misp_suricata_sync.main:main"

[project.optional-dependencies]
s3 = [
    "boto3>=1.28.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "asyncssh>=2.17.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.6.0",
    "coverage>=7.0.0",
    "httpx>=0.27.0",
    "hypothesis>=6.0.0",
    "ruff>=0.15.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aptl"]

# Bundle the git-tracked lab-asset tree (docker-compose.yml, scenarios/,
# config/, containers/, web/, scripts/, and the source that container images
# build from) into the wheel under aptl/_labdata/ so `pipx install aptl-labs`
# + `aptl lab init` runs a lab without a git clone (issue #659 / DEP-008).
# The hook ships only git-tracked files, which keeps generated secrets and
# local state out of the distribution. See hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
# Lint only the Python control-plane source. Tests, generated files, and
# the (TypeScript) MCP / web trees are out of scope for this check.
src = ["src"]

[tool.ruff.lint]
# Intentionally narrow: this is a *complexity* gate, not a style linter —
# `C901` (McCabe cyclomatic complexity) is the only rule enabled, so the
# check fails a god-method without churning the codebase on style. Widen
# the rule set deliberately if/when the team wants more from ruff.
select = ["C901"]

[tool.ruff.lint.mccabe]
# A function over this many independent paths is the "god method" this
# gate exists to stop. Matches SonarCloud's default cognitive-complexity
# threshold (15); ratchet down over time as the backlog shrinks.
max-complexity = 15

# [tool.ruff.lint.per-file-ignores] intentionally absent: the complexity
# backlog is empty. Every function under `src/` is now gated at
# max-complexity 15 with no carve-outs (issue #286). If a future change must
# temporarily exempt a file, add the table back and record the offender in
# ADR-010's backlog with its measured score.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "fuzz: property-based fuzz tests (run with: pytest -m fuzz)",
    "integration: tests that spawn subprocesses or read/write the filesystem; runnable by default but selectable via `pytest -m integration` or `pytest -m 'not integration'`",
]
addopts = "-m 'not fuzz'"

[tool.coverage.run]
source = ["aptl"]

[tool.coverage.report]
show_missing = true
# Non-POSIX branches (file modes are advisory off POSIX) cannot be exercised
# on the Linux CI runner. Excluding the guard clause keeps these
# platform-specific paths out of coverage without inline trailing
# ``# pragma: no cover`` comments (SonarCloud S139). ``exclude_also`` extends
# — not replaces — coverage's defaults, so ``# pragma: no cover`` still works.
exclude_also = [
    "if os.name != \"posix\":",
]

[tool.coverage.xml]
output = "coverage.xml"
