[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aptl-scenario-mcp-server"
version = "0.1.0"
description = "MCP server for creating and validating APTL SDL scenarios"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
aptl-scenario-mcp = "mcp_scenario.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scenario"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
